<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProtoUI</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="picture_title">Picture Title</string>
    <string name="description">A description will go here</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="map">On the Map</string>
    <string name="comments">Comments</string>
    <string name="pic_title_1">Picture Title</string>
    <string name="next">Next-></string>
    <string name="previous">&lt;- Prev</string>
    <string name="page_num">Page 1 of 1</string>
    <string name="pic_descript">Picture</string>
    <string name="location">Location</string>
    <string name="ent_comment">Enter a comment...</string>
    <string name="post">Post</string>
    <string name="user">User: Comment</string>
    <string name="dates">mm/dd/yyyy</string>
    <string name="empty">" "</string>
    <string name="your_com">Your comment here</string>
    <string name="title_activity_pic_com">PicCom</string>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>

    <string-array name="locations_array">
        <item>Location1</item>
        <item>Location2</item>
        <item>Location3</item>
    </string-array>

    <string name="upload">Upload Picture</string>
    <string name="title_activity_upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="openFile">Open File</string>
    <string name="useCamera">Use Camera</string>
    <string name="or">   or   </string>
    <string name="app_id">526801024025923</string>

</resources>