<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/theRel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity" >

	<LinearLayout
	    android:id="@+id/linLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:weightSum="2" >
	    
	    <RelativeLayout
	        android:id="@+id/RelativeLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/picture_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    		<ImageView
    		    android:id="@+id/imageView1"
    		    android:layout_width="match_parent"
    		    android:layout_height="match_parent"
    		    android:layout_below="@id/textView3"
    		    android:adjustViewBounds="true"
    		    android:contentDescription="@string/pic_descript"
    		    android:src="@drawable/glow" />

		</RelativeLayout>

	<RelativeLayout
	    android:id="@+id/RelativeLayout2"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >

 <LinearLayout
     android:id="@+id/linearlayout1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:background="@color/black"
     android:weightSum="3" >
		
        <EditText
            android:id="@+id/editText1"
            android:textCursorDrawable = "@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:minHeight="0dp"
            android:onClick="postComment"
            android:text="@string/post"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearlayout1"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

    </ListView>
    
   
    </RelativeLayout>
    </LinearLayout>

   

</RelativeLayout>